test/corpus/classDefFlag.txt
======================================
 Simple Hello class with a flag
======================================

{
  public Hello();
    flags: (0x0001) ACC_PUBLIC
}
SourceFile: "Hello.java"

---

(source_file
  (block
    (class_definition 
      (identifier)
      (flag_def
        (wrapped_hex_val
	  (hex_value)
	)
	(flag_value)
      )
    )
  )
  (source_file_def)
)
