test/corpus/hello.txt
==========================
 Hello plain
==========================

Compiled from "Hello.java"
public class Hello {
  public Hello();
  public static void main(java.lang.String[]);
}

-----------------------

    (source_file
      (header_info_compile)
      (class_def_plain
        (mod_access)
        (class_keyword)
        (identifier)
        (class_def_plain_body
          (class_def_plain_body_item
            (method_def
              (mod_access)
              (type)
              (args)))
          (class_def_plain_body_item
            (method_def
              (mod_access)
              (mod_static)
              (type)
              (identifier)
              (args
                (type)))))))
