test/corpus/hello.verbose.txt
====================
 Hello verbose
====================

Classfile /home/kghost/workspace/tree-sitter-javap/example/Hello.class
  Last modified Feb 6, 2022; size 255 bytes
  MD5 checksum 06940185f9e75f8df93ea41be0ab6fd0
  Compiled from "Hello.java"
public class Hello
  minor version: 0
  major version: 55
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #2                          // Hello
  super_class: #3                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #3.#12         // java/lang/Object."<init>":()V
   #2 = Class              #13            // Hello
   #3 = Class              #14            // java/lang/Object
   #4 = Utf8               <init>
   #5 = Utf8               ()V
   #6 = Utf8               Code
   #7 = Utf8               LineNumberTable
   #8 = Utf8               main
   #9 = Utf8               ([Ljava/lang/String;)V
  #10 = Utf8               SourceFile
  #11 = Utf8               Hello.java
  #12 = NameAndType        #4:#5          // "<init>":()V
  #13 = Utf8               Hello
  #14 = Utf8               java/lang/Object
{
  public Hello();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code:
      stack=1, locals=1, args_size=1
         0: aload_0
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return
      LineNumberTable:
        line 1: 0

  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code:
      stack=0, locals=1, args_size=1
         0: return
      LineNumberTable:
        line 5: 0
}
SourceFile: "Hello.java"

------------------

   (source_file
      (header
        (header_info
          (file_path))
        (header_info_last_mod)
        (header_info_md5
          (md5))
        (header_info_compile))
      (class_info_def
        (modifiers)
        (class_keyword)
        (identifier)
        (class_info_item
          (class_info_item_simple
            (number)))
        (class_info_item
          (class_info_item_simple
            (number)))
        (class_info_item
          (flag_def
            (hex_value)
            (flag_value)
            (flag_value)))
        (class_info_item
          (class_info_item_simple
            (number)
            (comment)))
        (class_info_item
          (class_info_item_simple
            (number)
            (comment)))
        (class_info_item
          (class_info_item_simple
            (number)
            (number)
            (number)
            (number))))
      (constant_pool_def
        (constant_pool_item
          (number)
          (number)
          (number)
          (comment))
        (constant_pool_item
          (number)
          (number)
          (comment))
        (constant_pool_item
          (number)
          (number)
          (comment))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number)
          (number)
          (number)
          (comment))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number)))
      (block
        (class_definition
          (method_def
            (modifiers)
            (type_identifier)
            (args))
          (descriptor_def
            (descriptor_value))
          (flag_def
            (hex_value)
            (flag_value))
          (code_def
            (code_info
              (code_info_stat
                (number))
              (code_info_stat
                (number))
              (code_info_stat
                (number))
              (numered_instruction
                (number)
                (instruction))
              (numered_instruction
                (number)
                (instruction
                  (number))
                (comment))
              (numered_instruction
                (number)
                (instruction)))
            (line_number_table_def
              (numered_line
                (number)
                (number))))
          (method_def
            (modifiers)
            (primitive_type)
            (identifier)
            (args
              (array_type
                (scoped_type_identifier
                  (scoped_type_identifier
                    (type_identifier)
                    (type_identifier))
                  (type_identifier))
                (dimensions))))
          (descriptor_def
            (descriptor_value))
          (flag_def
            (hex_value)
            (flag_value)
            (flag_value))
          (code_def
            (code_info
              (code_info_stat
                (number))
              (code_info_stat
                (number))
              (code_info_stat
                (number))
              (numered_instruction
                (number)
                (instruction)))
            (line_number_table_def
              (numered_line
                (number)
                (number))))))
      (source_file_def))
